--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
         <h3>grocery bud</h3>
         <div class="form-control">
           <input type="text" id="grocery" placeholder="e.g. eggs">
+          <button type="submit" class="submit-btn">
+            submit
+          </button>
         </div>
       </form>
       <!-- list -->
+      
     </section>
     <!-- javascript -->
     <script src="app.js"></script>
