--- a/index.html
+++ b/index.html
@@ -27,13 +27,9 @@
       </form>
       <!-- list -->
       <div class="grocery-container">
-        <div class="grocery-list">
-          <article class="grocery-item">
-          </article>
-        </div>
+        <div class="grocery-list"></div>
         <!-- button -->
         <button type="button" class="clear-btn">clear items</button>
-
       </div>
     </section>
     <!-- javascript -->
